<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffdrive_arduino</name>
  <version>0.0.0</version>
  <description>Demo package of `ros2_control` hardware for DiffBot with custom BT plugins.</description>

  <maintainer email="denis.stogl@stoglrobotics.de">Dr.-Ing. Denis Štogl</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="christoph.froehlich@ait.ac.at">Christoph Froehlich</maintainer>

  <author email="denis.stogl@stoglrobotics.de">Dr.-Ing. Denis Štogl</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Hardware interface dependencies -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>libserial-dev</depend>
  
  <!-- Service dependencies -->
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <!-- BT Plugin dependencies -->
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_util</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_behavior_tree plugin="${prefix}/bt_plugins.xml" />
  </export>
</package>